--- a/babmukja/pom.xml
+++ b/babmukja/pom.xml
@@ -12,6 +12,7 @@
   	<org.springframework-version>5.1.6.RELEASE</org.springframework-version>
   	<org.aspectj-version>1.9.3</org.aspectj-version>
   	<jackson-version>2.9.8</jackson-version>
+  	<tiles-version>3.0.8</tiles-version>
   </properties>
   
   <dependencies>
@@ -124,6 +125,23 @@
 		<version>4.7</version>
 		<scope>test</scope>
 	</dependency>
+	
+	<!-- Tiles 추가 -->
+   <dependency>
+       <groupId>org.apache.tiles</groupId>
+       <artifactId>tiles-extras</artifactId>
+       <version>${tiles-version}</version>
+     </dependency>
+   <dependency>
+       <groupId>org.apache.tiles</groupId>
+       <artifactId>tiles-servlet</artifactId>
+       <version>${tiles-version}</version>
+   </dependency>
+   <dependency>
+       <groupId>org.apache.tiles</groupId>
+       <artifactId>tiles-jsp</artifactId>
+       <version>${tiles-version}</version>
+   </dependency>
   </dependencies>
     <build>
 		<plugins>
