--- a/babmukja/src/main/webapp/WEB-INF/web.xml
+++ b/babmukja/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,10 @@
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   	<init-param>
   		<param-name>contextConfigLocation</param-name>
-	  		<param-value>classpath:config/spring/servlet-context.xml</param-value>
+	  		<param-value>
+	  		classpath:config/spring/servlet-context.xml
+	  		classpath:config/spring/spring-security.xml
+	  		</param-value>
   	</init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
