--- a/babmukja/src/main/resources/config/mybatis/db.properties
+++ b/babmukja/src/main/resources/config/mybatis/db.properties
@@ -1,4 +1,4 @@
 jdbc.mysql.url=jdbc:mysql://localhost:3306/babmukja?characterEncoding=UTF-8&useSSL=false&amp&serverTimezone=Asia/Seoul
 jdbc.mysql.driver=com.mysql.cj.jdbc.Driver
-jdbc.mysql.username=root
-jdbc.mysql.password=admin
+jdbc.mysql.username=babbab
+jdbc.mysql.password=babbab
